<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_gallery_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/nav_inmuebles"
            android:icon="@drawable/ic_gallery_black_24dp"
            android:title="@string/menu_inmuebles" />
        <item
            android:id="@+id/nav_inquilinos"
            android:icon="@drawable/ic_slideshow_black_24dp"
            android:title="@string/menu_inquilinos" />
        <item
            android:id="@+id/nav_contratos"
            android:icon="@drawable/ic_slideshow_black_24dp"
            android:title="@string/menu_contratos" />
    </group>

    <item android:title="@string/menu_grupo_cuenta">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:checkable="true"
                android:icon="@android:drawable/ic_delete"
                android:title="@string/menu_logout" />
        </menu>
    </item>
</menu>
