<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.trabajopracticoinmobiliaria.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_placeholder" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.trabajopracticoinmobiliaria.ui.perfil.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_placeholder" />

    <fragment
        android:id="@+id/nav_inmuebles"
        android:name="com.example.trabajopracticoinmobiliaria.ui.inmuebles.InmueblesFragment"
        android:label="@string/menu_inmuebles"
        tools:layout="@layout/fragment_placeholder" />

    <fragment
        android:id="@+id/nav_inquilinos"
        android:name="com.example.trabajopracticoinmobiliaria.ui.inquilinos.InquilinosFragment"
        android:label="@string/menu_inquilinos"
        tools:layout="@layout/fragment_placeholder" />

    <fragment
        android:id="@+id/nav_contratos"
        android:name="com.example.trabajopracticoinmobiliaria.ui.contratos.ContratosFragment"
        android:label="@string/menu_contratos"
        tools:layout="@layout/fragment_placeholder" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.trabajopracticoinmobiliaria.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />
</navigation>
